Big Work in progress commit

--- a/frontEndSrc/css/src/general.css
+++ b/frontEndSrc/css/src/general.css
@@ -888,6 +888,11 @@ aside picture, aside img {
 	filter: drop-shadow(0 -1px 4px #fff);
 }
 
+.history-img {
+	width: 110px;
+	height: 156px;
+}
+
 /* ----------------------------------------------------------------------------
 Settings Form
 -----------------------------------------------------------------------------*/
