--- a/frontEndSrc/css/src/general.css
+++ b/frontEndSrc/css/src/general.css
@@ -87,10 +87,6 @@ tbody > tr:nth-child(odd) {
 	background: #ddd;
 }
 
-select[multiple] {
-	width: 100%;
-}
-
 a:hover, a:active {
 	color: var(--link-hover-color)
 }
@@ -874,6 +870,12 @@ aside picture, aside img {
 .streaming-logo {
 	width: 50px;
 	height: 50px;
+	vertical-align: middle;
+}
+
+.small-streaming-logo {
+	width: 25px;
+	height: 25px;
 	vertical-align: middle;
 }
 
