--- a/frontEndSrc/css/src/general.css
+++ b/frontEndSrc/css/src/general.css
@@ -94,6 +94,7 @@ a:hover, a:active {
 iframe {
 	display: block;
 	margin: 0 auto;
+	border: 0;
 }
 
 /* -----------------------------------------------------------------------------
